--- a/e-invoice.html
+++ b/e-invoice.html
@@ -45,7 +45,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a href="http://raya-it.net" target="_blank" data-scroll-nav="6">راية للخدمات الدولية</a></li>
+                            <li class="nav-item"><a href="http://raya-it.net" target="_blank" >راية للخدمات الدولية</a></li>
                             <li class="nav-item"><a href="#" data-scroll-nav="8">اتصل بنا</a></li>
                         </ul>
                     </div>
@@ -615,7 +615,7 @@
                         </div>
                         <div class="contact-form-block">
                             <div class="section-header-style2">
-                                <h2>  ابدأ بتطبيق الفاتورة الإلكترونية الآن 
+                                <h2>  ابدأ بتطبيق الفاتورة<br> الإلكترونية الآن 
 								!
 								</h2>
                                 <p>
