phone number adjustment

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             <div class="inner-box">
                                 <div class="step_num"><img src="images/step2.png" alt="Img"/></div>
                                 <h3>التكامل مع النظام المالي</h3>
-                                <p> يقوم برنامج راية بالتكامل مع نظامك المحاسبي، و ميكنة إرسال الفواتير الفواتير بنظام مميكن</p>
+                                <p> يقوم برنامج راية بالتكامل مع نظامك المحاسبي، و ميكنة إرسال الفواتير لمصلحة الضرائب</p>
                             </div>
                         </div>
                         <!-- End Block 2 -->
@@ -585,7 +585,7 @@
                                 <h4>الهاتف</h4>
                                 <div class="contact-block-side">
                                     <i class="flaticon-smartphone-7"></i>
-                                    <p>
+                                    <p class="phone-number">
                                         <span>+20 12 23461340</span>
                                     </p>
                                 </div>
