--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
 								!
 								</h2>
                                 <p>
-                                  ادخل بياناتك و سنقوم بالتوصل معك
+                                  ادخل بياناتك و سنقوم بالتوصل بك
                                 </p>
                             </div>
                             <form class="contact-form" name="form2" action="https://submit-form.com/beF4Y5T1" >
