--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
           <script src="js/html5shiv.min.js"></script>
           <script src="js/respond.min.js"></script>
         <![endif]-->
+		
+		<!-- Global site tag (gtag.js) - Google Ads: 439755269 -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=AW-439755269"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'AW-439755269');
+		</script>
+
+		
     </head>
     <body>
         <!-- preloader -->
@@ -130,7 +142,7 @@
                              </div>
                             <div class="feature-content">
                                 <h3>التكامل</h3>
-                                <p>ميكنة كاملة مع نظام الضرائب، سواء لديك نظام محاسيي قائم (Oracle, SAP, Other Financials System) أو لا</p>
+                                <p>ميكنة كاملة مع نظام الضرائب، سواء لديك نظام محاسبي قائم (Oracle, SAP, Other Financials System) أو لا</p>
                             </div>
                         </div>
                         <div class="feature-block">
