--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
 		  gtag('config', 'AW-439755269');
 		</script>
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-KHJMM6CCPK"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-KHJMM6CCPK');
+        </script>
+
 		
     </head>
     <body>
