updates to email

--- a/index.html
+++ b/index.html
@@ -32,18 +32,9 @@
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
 
-		  gtag('config', 'AW-439755269');
+          gtag('config', 'AW-439755269');
+          gtag('config', 'G-KHJMM6CCPK');
 		</script>
-
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-KHJMM6CCPK"></script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-KHJMM6CCPK');
-        </script>
 
 		
     </head>
@@ -620,7 +611,7 @@
                                 <div class="contact-block-side">
                                     <i class="flaticon-paper-plane-1"></i>
                                     <p>
-                                        <span> e-invoice@rayais.com</span>
+                                        <span>rayait_info@rayacorp.com</span>
                                     </p>
                                 </div>
                             </div>
@@ -715,5 +706,22 @@
         <script src="js/scrollIt.min.js"></script>
         <!-- Main Script -->
         <script src="js/script.js"></script>
+        <!-- Linkedin Insight Tag -->
+
+        <script type="text/javascript">
+            _linkedin_partner_id = "3160633";
+            window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
+            window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+            </script><script type="text/javascript">
+            (function(){var s = document.getElementsByTagName("script")[0];
+            var b = document.createElement("script");
+            b.type = "text/javascript";b.async = true;
+            b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+            s.parentNode.insertBefore(b, s);})();
+            </script>
+            <noscript>
+            <img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=3160633&fmt=gif" />
+            </noscript>
+
     </body>
 </html>
